# LilyGo-T-RGB

./: .gitignore  README.md  keywords.txt  library.json  library.properties  platformio.ini
.github/workflows/: arduino_ci.yml  pio.yml
Shell_file/: Dimensions.dwg  Display.dxf  T-RGB_3D.stp  lcd_3D.stl
boards/: LilyGo-T-RGB.json
dimensions/: README.MD  ScreenSize.dwg  T-RGB-FULL-3D-2.8-Inches.stp  T-RGB-FULL-3D.stp  T-RGB-PCB.DXF
example/GFX/: GFX.ino  platformio.ini
example/TouchGesturesTestingV2/: Orbitron_ExtraBold12pt7b.h  TouchGesturesTestingV2.ino  ft3267.h
example/display/: display.ino  platformio.ini
example/esp-idf-example/T-RGB/main/: CMakeLists.txt  main.cpp  pins_config.h  xl9535.c
example/factory/: factory.ino  factory_ui.cpp  factory_ui.h  platformio.ini
example/lv_benchmark/: img.h  lv_benchmark.ino  lv_conf.h  platformio.ini
example/lv_music/: lv_music.ino  platformio.ini
examples/AdjustBacklight/: AdjustBacklight.ino
examples/Arduino_GFX_Gif/: Arduino_GFX_Gif.ino  GifClass.h
examples/Arduino_GFX_HelloWorld/: Arduino_GFX_HelloWorld.ino
examples/Arduino_GFX_SpriteGif/: Arduino_GFX_SpriteGif.ino
examples/BatteryVoltage/: BatteryVoltage.ino
examples/DeepSleep/: DeepSleep.ino
examples/GFX/: GFX.ino  img2.h
examples/Grove_4pin_BMP280_sensor/: Grove_4pin_BMP280_sensor.ino
examples/RGBPanel/: RGBPanel.ino  (+4 more)
firmware/: README.MD
lib/: lv_conf.h
src/: LV_Helper.cpp  LV_Helper.h  LV_Helper_v9.cpp  LilyGo_Display.h  LilyGo_RGBPanel.cpp  LilyGo_RGBPanel.h  RGBPanelInit.h  lv_conf.h  lv_conf.h.v9  utilities.h
(+64 files in other folders)
